Enabled URL Filter Change Callback for supervised user CI.

With committed interstitials on, if the URL filter changes to block the
current URL, the site will now reload, causing an interstitial to
appear. Also reenabled (and adapted) tests that rely on this
functionality.

Bug: 817101

Change-Id: Ib7afec1f703216ce1809048cb1bc3416acaf17ae
Reviewed-on: https://chromium-review.googlesource.com/965026
Commit-Queue: Carlos IL <carlosil@chromium.org>
Reviewed-by: Bernhard Bauer <bauerb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546591}
Former-commit-id: 2e9b6065509e585335fb6518d587ef87ae2d22bc