chrome/browser/supervised_user/supervised_user_navigation_observer.cc
@@ -153,14 +153,18 @@ void SupervisedUserNavigationObserver::URLFilterCheckCallback(
     return;
 
   if (!is_showing_interstitial_ &&
-      behavior == SupervisedUserURLFilter::FilteringBehavior::BLOCK &&
-      !base::FeatureList::IsEnabled(
-          features::kSupervisedUserCommittedInterstitials)) {
-    // TODO(carlosil): Handle this case for committed interstitials. For now, we
-    // pass a 0 as the navigation id causing the interstitial for this case
-    // since we don't have the real id here, this doesn't cause issues since the
-    // navigation id is not used when committed interstitials are not enabled.
-    // This will be removed once committed interstitials are the only code path.
+      behavior == SupervisedUserURLFilter::FilteringBehavior::BLOCK) {
+    if (base::FeatureList::IsEnabled(
+            features::kSupervisedUserCommittedInterstitials)) {
+      web_contents()->GetController().Reload(content::ReloadType::NORMAL,
+                                             false);
+      return;
+    }
+    // TODO(carlosil): For now, we pass a 0 as the navigation id causing the
+    // interstitial for the non-committed interstitials case since we don't have
+    // the real id here, this doesn't cause issues since the navigation id is
+    // not used when committed interstitials are not enabled. This will be
+    // removed once committed interstitials are the only code path.
     const bool initial_page_load = false;
     MaybeShowInterstitial(
         url, reason, initial_page_load, 0,
